// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter renders custom content correctly 1`] = `
<div>
  <div class="bmant-dropdown  ant-dropdown-placement-bottomRight" style="display: none;">
    <div class="bmant-table-filter-dropdown ant-dropdown-content">
      <div class="custom-filter-dropdown">custom filter</div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div class="bmant-table-wrapper">
  <div class="bmant-spin-nested-loading">
    <!---->
    <div class="bmant-spin-container">
      <div class="bmant-table ant-table-default ant-table-scroll-position-left">
        <!---->
        <div class="bmant-table-content">
          <!---->
          <div class="bmant-table-body">
            <table class="">
              <colgroup>
                <col>
              </colgroup>
              <thead class="bmant-table-thead">
                <tr>
                  <th class="bmant-table-column-has-actions ant-table-column-has-filters ant-table-row-cell-last"><span class="bmant-table-header-column"><div class=""><span class="bmant-table-column-title">Name</span><span class="bmant-table-column-sorter"><!----></span>
          </div></span>
          <!--teleport start-->
          <!--teleport end--><span title="Filter menu" tabindex="-1" role="img" aria-label="filter" class="bmanticon anticon-filter ant-dropdown-trigger"><svg class="" data-icon="filter" width="1em" height="1em" fill="currentColor" aria-hidden="true" viewBox="64 64 896 896" focusable="false"><path d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"></path></svg></span></th>
          </tr>
          </thead>
          <tbody class="bmant-table-tbody">
            <tr class="bmant-table-row ant-table-row-level-0" data-row-key="0">
              <td class="bmant-table-column-has-actions ant-table-column-has-filters">
                <!---->
                <!---->Jack
              </td>
            </tr>
            <tr class="bmant-table-row ant-table-row-level-0" data-row-key="1">
              <td class="bmant-table-column-has-actions ant-table-column-has-filters">
                <!---->
                <!---->Lucy
              </td>
            </tr>
            <tr class="bmant-table-row ant-table-row-level-0" data-row-key="2">
              <td class="bmant-table-column-has-actions ant-table-column-has-filters">
                <!---->
                <!---->Tom
              </td>
            </tr>
            <tr class="bmant-table-row ant-table-row-level-0" data-row-key="3">
              <td class="bmant-table-column-has-actions ant-table-column-has-filters">
                <!---->
                <!---->Jerry
              </td>
            </tr>
          </tbody>
          </table>
        </div>
        <!---->
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
</div>
`;

exports[`Table.filter renders menu correctly 1`] = `
<div>
  <div class="bmant-dropdown  ant-dropdown-placement-bottomRight" style="display: none;">
    <div class="bmant-table-filter-dropdown ant-dropdown-content">
      <ul role="menu" tabindex="0" class="bmant-dropdown-menu ant-dropdown-menu-vertical ant-dropdown-menu-root">
        <li role="menuitem" class="bmant-dropdown-menu-item"><label class="bmant-checkbox-wrapper"><span class="bmant-checkbox"><input type="checkbox" class="bmant-checkbox-input" value=""><span class="bmant-checkbox-inner"></span></span></label><span>Boy</span></li>
        <li role="menuitem" class="bmant-dropdown-menu-item"><label class="bmant-checkbox-wrapper"><span class="bmant-checkbox"><input type="checkbox" class="bmant-checkbox-input" value=""><span class="bmant-checkbox-inner"></span></span></label><span>Girl</span></li>
        <li role="menuitem" class="bmant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical">
          <div aria-haspopup="true" title="Title" class="bmant-dropdown-menu-submenu-title">Title<i class="bmant-dropdown-menu-submenu-arrow"></i></div>
        </li>
      </ul>
      <div class="bmant-table-filter-dropdown-btns"><a class="bmant-table-filter-dropdown-link confirm">OK</a><a class="bmant-table-filter-dropdown-link clear">Reset</a></div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders radio filter correctly 1`] = `
<div>
  <div class="bmant-dropdown  ant-dropdown-placement-bottomRight" style="display: none;">
    <div class="bmant-table-filter-dropdown ant-dropdown-content">
      <ul role="menu" tabindex="0" class="bmant-dropdown-menu ant-dropdown-menu-vertical ant-dropdown-menu-root">
        <li role="menuitem" class="bmant-dropdown-menu-item"><label class="bmant-radio-wrapper"><span class="bmant-radio"><input type="radio" class="bmant-radio-input" value=""><span class="bmant-radio-inner"></span></span></label><span>Boy</span></li>
        <li role="menuitem" class="bmant-dropdown-menu-item"><label class="bmant-radio-wrapper"><span class="bmant-radio"><input type="radio" class="bmant-radio-input" value=""><span class="bmant-radio-inner"></span></span></label><span>Girl</span></li>
        <li role="menuitem" class="bmant-dropdown-menu-submenu ant-dropdown-menu-submenu-vertical">
          <div aria-haspopup="true" title="Title" class="bmant-dropdown-menu-submenu-title">Title<i class="bmant-dropdown-menu-submenu-arrow"></i></div>
        </li>
      </ul>
      <div class="bmant-table-filter-dropdown-btns"><a class="bmant-table-filter-dropdown-link confirm">OK</a><a class="bmant-table-filter-dropdown-link clear">Reset</a></div>
    </div>
  </div>
</div>
`;
